# eshop-imgui-frontend

./: .env.h  .gitignore  CMakeLists.txt  conandata.yml  main.cpp
gui/: CMakeLists.txt  base_window.cpp  base_window.h  gui.cpp  gui.h  shop_list_window.cpp  shop_list_window.h  user_profile_window.cpp  user_profile_window.h
gui/include/gui/: base_window_t.h  gui.h  imgui_ex.cpp  imgui_ex.h
gui/include/gui/windows/: auth_window.cpp  auth_window.h  payment_window.h  product_value_window.h  shop_list_window_t.h  user_profile_window_t.h
gui/src/: auth_window.cpp  base_window_t.cpp  gui.cpp  imgui_ex.cpp  payment_window.cpp  product_value_window.cpp  shop_list_window_t.cpp  user_profile_window_t.cpp
imgui/backend/: imgui_impl_win32.cpp
logic/: CMakeLists.txt
logic/include/logic/: cache.h  user.h  user_fabric.h
logic/include/logic/fabrics/: product_fabric.h  user_fabric.h
logic/include/logic/models/: category_model.h  product_model.h  user_model.h
logic/include/logic/payment/: apple_payment.h  base_payment.h  google_payment.h
logic/include/logic/utilities/: task_manager.h
logic/src/: apple_payment.cpp  base_payment.cpp  cache.cpp  google_payment.cpp  product_fabric.cpp  product_model.cpp  task_manager.cpp  user.cpp  user_fabric.cpp  user_model.cpp
